--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 *{
     color:black;
 background-color: teal;}
-.
-*::before,
-*::after {   
-    box-sizing: border-box;
-
-    }
+h1{
+    text-align: center;
+    font-size: 50px;
+    color: white;
+}
